net/ipv4/devinet.c
@@ -151,7 +151,8 @@ struct in_device *inetdev_init(struct net_device *dev)
 #ifdef CONFIG_SYSCTL
 	devinet_sysctl_register(in_dev, &in_dev->cnf);
 #endif
-	if (dev->flags&IFF_UP)
+	ip_mc_init_dev(in_dev);
+	if (dev->flags & IFF_UP)
 		ip_mc_up(in_dev);
 	return in_dev;
 }
